--- a/boiler-plate.html
+++ b/boiler-plate.html
@@ -4,6 +4,7 @@
 <head>
     <title> </title>
     <link rel="stylesheet" href="" />
+    <script src="utility-fuctions.js"></script>
     <script src=""></script>
 </head>
 
