--- a/class.html
+++ b/class.html
@@ -20,6 +20,8 @@
       <output id="outputTag2"></output>
       <button onclick="toStringExample()">toString Example</button>
       <output id="outputTag3"></output>
+      <button onclick="constructorExample()">Constructor Example</button>
+      <output id="outputTag4"></output>
     </main>
     <footer>Website is created by David Billiot</footer>
   </body>
