--- a/nodes.html
+++ b/nodes.html
@@ -14,6 +14,6 @@
       <button onclick="">Click</button>
       <output id="outputTag"></output>
     </main>
-    <footer>Website is created by David Billiot</footer>
+    <footer>Website is notes on NODE.JS</footer>
   </body>
 </html>
