--- a/JavaScript.html
+++ b/JavaScript.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title> </title>
     <link rel="stylesheet" href="" />
     <script src="utility-fuctions.js"></script>
     <script src="javascript.js"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <nav></nav>
+      <nav></nav>
     </header>
     <main>
-        <button onclick="bracketNotationExample()">Output</button>
-        <output id="outputTag">outputTag </output><br />
-        <button onclick="greetingExample()">Greeting</button>
-        <output id="greetingTag">greetingTag </output><br />
-        <button onclick="overwriteExample()">Overwrite</button>
-        <output id="overwriteTag">overwriteTag </output><br />
+      <button onclick="bracketNotationExample()">Output</button>
+      <output id="outputTag">outputTag </output><br />
+      <button onclick="greetingExample()">Greeting</button>
+      <output id="greetingTag">greetingTag </output><br />
+      <button onclick="overwriteExample()">Overwrite</button>
+      <output id="overwriteTag">overwriteTag </output><br />
+      <button onclick="propertyChaining()">Property Chaining</button>
+      <output id="propertyChainingTag">propertyChainingTag </output><br />
+      <button onclick="itemChaining()">Item Chaining</button>
+      <output id="itemChainingTag">itemChainingTag </output><br />
     </main>
     <footer>Website is created by David Billiot</footer>
-</body>
-
+  </body>
 </html>
